Fixed QTBUG-40172 Android Bluetooth Socket Connection fails in some cases.

Change-Id: Ibc4c835a9778bfa220ad6553f2c0140a7727d75d
Reviewed-by: Alex Blasche <alexander.blasche@digia.com>